<resources>
    <string name="app_name">HealthyFoody</string>

    <string name="title_address">Direcciones</string>
    <string name="title_cart">Carrito</string>
    <string name="title_catalog">Menú</string>

    <string name="title_activity_address">Map</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="txt_category_title">¿QUÉ QUIERES COMER HOY?</string>
    <string name="hint_password_login">Password</string>
    <string name="txt_button_login">Iniciar Sesión</string>
    <string name="txt_button_register_login">REGISTRO</string>
    <string name="hint_email">Email</string>
    <string name="txt_title_login">HEALTHY FOODY</string>
    <string name="txt_button_register">Registrarse</string>
    <string name="txt_loading">Cargando...</string>
    <string name="agregar_direcci_n">Agregar Dirección</string>
    <string name="hint_name_address">Ingrese apodo de esta ubicación</string>
    <string name="hint_full_address">Seleccione una ubicación</string>
    <string name="txt_title_register">Registro</string>
    <string name="txt_has_account_question">¿Ya tienes cuenta? Inicia Sesión</string>
</resources>
